<resources>
    <string name="app_name">Rick&amp;Morty</string>
    <string name="character_s_image">character\'s image</string>
    <string name="rick_sanchez">Rick Sanchez</string>
    <string name="alien">Alien</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="character_detail_image">Character detail image</string>
    <string name="james_sparrow">James Sparrow</string>
    <string name="male">Male</string>
    <string name="origin">Origin</string>
    <string name="alive">Alive</string>
    <string name="human">Human</string>
    <string name="location">Location</string>
    <string name="characters_menu_icon">Characters</string>
    <string name="episodes_menu_icon">Episodes</string>
</resources>
