<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".presentation.characterDetail.fragment.CharacterDetailFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp" tools:src="@tools:sample/avatars"
                    android:id="@+id/activity_character_detail_imageview"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/guideline" android:scaleType="centerCrop"
                    android:contentDescription="@string/character_detail_image"/>
        <androidx.constraintlayout.widget.Guideline
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.4"
                    android:id="@+id/guideline"/>

        <androidx.core.widget.NestedScrollView android:layout_width="0dp"
                                               android:layout_height="0dp"
                                               app:layout_constraintTop_toBottomOf="@+id/activity_character_detail_imageview"
                                               app:layout_constraintBottom_toBottomOf="parent"
                                               app:layout_constraintStart_toStartOf="parent"
                                               app:layout_constraintEnd_toEndOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                               android:layout_height="match_parent">

                <TextView
                        android:text="@string/origin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:id="@+id/activity_character_detail_origin_textview"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                        app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/activity_character_detail_species_textview"
                        android:textSize="16sp"/>
                <TextView
                        android:text="@string/location"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:id="@+id/activity_character_detail_location_textview"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                        app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/activity_character_detail_origin_textview"
                        android:textSize="16sp"/>
                <TextView
                        android:text="@string/male"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/activity_character_detail_gender_textview" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                        android:layout_marginTop="6dp" app:layout_constraintTop_toBottomOf="@+id/activity_character_detail_name_textview"
                        android:textSize="17sp" android:textStyle="bold"/>

                <TextView
                        android:text="@string/james_sparrow"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/activity_character_detail_name_textview"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                        android:textSize="24sp" android:textStyle="bold" android:textColor="@android:color/black"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                        app:layout_constraintTop_toTopOf="parent"/>
                <TextView
                        android:text="@string/human"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:id="@+id/activity_character_detail_species_textview"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/activity_character_detail_status_textview"
                        android:textSize="16sp"/>
                <TextView
                        android:text="@string/alive"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:id="@+id/activity_character_detail_status_textview"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/activity_character_detail_gender_textview"
                        android:textSize="16sp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>




    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>